# dmitriiChvTestovoe

./: .dockerignore  .env  .env_docker  .gitignore  Dockerfile  Makefile  Readme.md  alembic.ini  pyproject.toml
app/: config.py  database.py  exceptions.py  main.py
app/api/: auth.py  dependencies.py  ref_codes.py
app/migrations/: env.py
app/migrations/versions/: 2025_03_05_1702-a00867df4060_initial_migration.py  2025_03_05_1713-85967aecdd6b_fix_users.py  2025_03_13_1510-6bbc75b3745f_fix_users.py
app/models/: __init__.py  users.py
app/repositories/: base.py  ref_codes.py  users.py
app/repositories/mappers/: base.py  mappers.py
app/repositories/redis/: redis_manager.py
app/schemas/: ref_codes.py  users.py
app/services/: auth.py  base.py  ref_codes.py
app/utils/: db_manager.py  utils.py
docker_compose/: app.yaml  storage.yaml
